# api-com-django

./: README.md
mysite/: pyproject.toml
mysite/contacts/: forms.py  models.py  urls.py  views.py
mysite/contacts/migrations/: 0001_initial.py
mysite/contacts/templates/contacts/: create.html
mysite/mysite/: admin.py  settings.py  urls.py
mysite/polls/: admin.py  apps.py  models.py  views.py
mysite/polls/migrations/: 0001_initial.py  0002_question_active.py  0003_alter_choice_options_alter_question_options_and_more.py
mysite/templates/admin/: base.html
